# Adihaone-1

./: .gitignore  README.md  app.py  index.py  pyproject.toml  requirements.txt  server.py  vercel.json
ai-assistant/: .env.example  ARCHITECTURE.md  COMMANDS.md  DEEPGRAM_SETUP.md  INDEX.md  PROJECT_STRUCTURE.md  README.md  SETUP_FREE_API.md  VOICE_UPDATE.md  requirements.txt  start-assistant.bat  start-assistant.ps1
ai-assistant/backend/: .env.example  app.py  deepgram_processor.py
ai-assistant/frontend/: script.js  styles.css
ai_assistant/: COMPLETION_REPORT.md  DELIVERABLES.md  QUICKSTART.md  QUICK_REFERENCE.md  SETUP_SUMMARY.md  START_HERE.md  SUMMARY.txt  VOICE_TROUBLESHOOTING.md  __init__.py  setup.py
ai_assistant/backend/: app.py  free_api_processor.py  llm_processor.py  nlp_processor.py  speech_recognition_module.py  text_to_speech.py
ai_assistant/frontend/: index.html
api/: app.py  index.py
app/: app.py  index.py  server.py
src/: app.py  index.py  server.py
