[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "1.0.0"
description = "AI Personal Assistant with Free API integration"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
    "SpeechRecognition==3.10.0",
    "pyttsx3==2.90",
    "requests==2.31.0",
    "python-dotenv==1.0.0"
]

[project.scripts]
app = "ai_assistant.backend.app:app"
